--- a/fixed.yaml
+++ b/fixed.yaml
@@ -19,6 +19,13 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+        resources:
+          limits:
+            cpu: "0.5"
+            memory: "256Mi"
+          requests:
+            cpu: "0.2"
+            memory: "128Mi"
 ---
 apiVersion: v1
 kind: Service
@@ -30,5 +37,6 @@ spec:
   ports:
     - protocol: TCP
       port: 80
+      targetPort: 80
   type: ClusterIP
   
